[package]
name = "llhttp-sys"
version = "0.1.2"
authors = ["Jack Liar", "cattchen"]
description = "llhttp bindings for Rust"
edition = "2018"
keywords = ["http", "nodejs", "llhttp"]

[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.59", optional = true }
env_logger = "0.9"
log = "0.4"
pkg-config = "0.3"
cc="1.0.79"

[features]
static = []
gen=["gen_binding", "gen_source"]
gen_binding = ["bindgen"]
gen_source=[]