[package]
name = "llhttp"
version = "0.1.2"
authors = ["Jack Liar", "cattchen"]
edition = "2018"

[dependencies]
libc = "0.2"
llhttp-sys = { version = "0.1.2", path = "../llhttp-sys" }

[dev-dependencies]
anyhow="1.0.70"
map-macro = "0.2.5"

[features]
gen = ["llhttp-sys/gen"]
static = ["llhttp-sys/static"]
